[gd_scene load_steps=10 format=1]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://graphics/player.png" type="Texture" id=2]
[ext_resource path="res://graphics/effect_hit.png" type="Texture" id=3]
[ext_resource path="res://graphics/Font_8.tres" type="DynamicFont" id=4]
[ext_resource path="res://audio/pickup.ogg" type="AudioStream" id=5]
[ext_resource path="res://audio/crash.ogg" type="AudioStream" id=6]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0
height = 20.0

[sub_resource type="Animation" id=2]

resource/name = "RESET"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("effect_hit:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("effect_hit:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]

length = 0.4
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("effect_hit:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.35 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("effect_hit:frame")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1, 0.2, 0.3 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 0 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]

transform/pos = Vector2( 146, 214 )
z/z = 10
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 0.7, 0, 0, 0.5, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/scale = Vector2( 0.7, 0.5 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="effect_hit" type="Sprite" parent="."]

transform/pos = Vector2( 0, -9 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
vframes = 2
hframes = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/RESET = SubResource( 2 )
anims/hit = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="pickuptext" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = -22.0
margin/right = 48.0
margin/bottom = -9.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "!?"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Audio_PickUp" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Audio_Crash" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500


